# build123_container

./: .gitignore  404.html  Dockerfile  HISTORY.md  NOTICE  README.md  compose.dev.yaml  compose.yaml  continue.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
architecture/: index.html
cli/: index.html
docs/: architecture.md  cli.md  getting-started.md  index.md  troubleshooting.md  v2_evaluation.md  v2_layers.md  v2_plan.md  writing-parts.md
getting-started/: index.html
project/manifests/: box_unit.py  button.py  button_panel_test.py  coupler.py  coupler_demo.py  hinge_demo.py  mount_panel.py  n20_window_test.py  nested_asm.py  single_part.py  window_test.py
search/: search_index.json
src/mk/: __init__.py  __main__.py  builder.py  db.py  dxf.py  geometry.py  hlr.py  inertia.py  kb.py  layers.py  mate.py  meta_tree.py  step_xcaf.py  transform.py  urdf.py
src/mk/commands/: apply.py  asm.py  bom.py  build.py  export.py  init.py  layer.py  mass.py  measure.py  part.py  show.py  state.py
tests/: conftest.py  test_hlr_dxf.py  test_imports.py  test_layers.py  test_mate.py  test_meta_tree.py  test_part_export.py  test_state.py  test_urdf.py
tests/fixtures/: nested_asm.py  single_part.py  topo_chain.py  two_part_asm.py
troubleshooting/: index.html
v2_evaluation/: index.html
v2_layers/: index.html
v2_plan/: index.html
writing-parts/: index.html
